--- a/views/index.erb
+++ b/views/index.erb
@@ -26,6 +26,7 @@
           <h4>Repos: {{ public_repos }}</h4>
           <h4>Followers: {{ followers }}</h4>
         </div>
+          <a class='close' href='#'>✖</a>
           <br clear="all">
         </div>
       </div>
@@ -56,6 +57,9 @@
       $('#add_profile').submit(function(event) {
         event.preventDefault();
         addProfileFromUsername($('#username').val());
+      });
+      $('.profile-container').on('click', '.close', function(){
+          $(this).parent().remove(); 
       });
     });
 
